--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 src/routeTree.gen.ts
 src/routeTree.gen.d.ts
 
+.wrangler/
+wrangler.jsonc
+
 # Runtime data
 pids
 *.pid
